--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,27 +1,60 @@
-<p id="notice"><%= notice %></p>
-<h1>Contacts</h1>
+<div class="container py-4">
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h1 class="h2 mb-0">Contactos</h1>
+    <div>
+      <%= link_to dashboard_path, class: "btn btn-outline-secondary me-2" do %>
+        <i class="fa fa-dashboard"></i> Dashboard
+      <% end %>
+      <%= link_to contacts_clean_url, class: "btn btn-outline-danger", data: { confirm: "¿Está seguro de eliminar todos los contactos?" } do %>
+        <i class="fa fa-trash"></i> Limpiar contactos
+      <% end %>
+    </div>
+  </div>
 
-<p><div><%= link_to "Clean Contacts", contacts_clean_url %></div></p>
+  <% if notice %>
+    <div class="alert alert-success" id="notice"><%= notice %></div>
+  <% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Message</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div class="card shadow-sm">
+    <div class="card-body">
+      <div class="table-responsive">
+        <table class="table table-striped table-hover align-middle">
+          <thead class="table-dark">
+            <tr>
+              <th>Nombre</th>
+              <th>Email</th>
+              <th>Mensaje</th>
+              <th width="150" class="text-center">Acciones</th>
+            </tr>
+          </thead>
 
-  <tbody>
-    <% @contacts.each do |contact| %>
-      <tr>
-        <td><%= contact.name %></td>
-        <td><%= contact.email %></td>
-        <td><%= contact.message %></td>
-        <td><%= link_to 'Show', contact %></td>
-        <td><%= link_to 'Destroy', contact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+          <tbody>
+            <% if @contacts.any? %>
+              <% @contacts.each do |contact| %>
+                <tr>
+                  <td><%= contact.name %></td>
+                  <td><%= link_to contact.email, "mailto:#{contact.email}", class: "text-decoration-none" %></td>
+                  <td><%= truncate(contact.message, length: 100) %></td>
+                  <td class="text-center">
+                    <div class="btn-group btn-group-sm">
+                      <%= link_to contact, class: "btn btn-outline-primary" do %>
+                        <i class="fa fa-eye"></i>
+                      <% end %>
+                      <%= link_to contact, method: :delete, data: { confirm: '¿Está seguro?' }, class: "btn btn-outline-danger" do %>
+                        <i class="fa fa-trash"></i>
+                      <% end %>
+                    </div>
+                  </td>
+                </tr>
+              <% end %>
+            <% else %>
+              <tr>
+                <td colspan="4" class="text-center py-4">No hay contactos para mostrar</td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
