--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Rubik:wght@400;500&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 	
 	<%= stylesheet_link_tag 'application', media: 'all' %>
 	<%= javascript_importmap_tags %>
@@ -38,7 +39,7 @@
 
 	<div id="footer">
 		<div class="d-flex justify-content-center align-items-center copyfoot py-2">
-			Greyhat &nbsp;&nbsp;<%=fa_icon "copyright"%>&nbsp;&nbsp;All rights reserved
+			Greyhat &nbsp;&nbsp;<i class="fa-solid fa-copyright"></i>&nbsp;&nbsp;All rights reserved
 		</div>
 	</div>
 
