--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,27 +1,71 @@
-<p id="notice"><%= notice %></p>
+<div class="container py-4">
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h1 class="h2 mb-0">Artículos</h1>
+    <div>
+      <%= link_to dashboard_path, class: "btn btn-outline-secondary me-2" do %>
+        <i class="fa fa-dashboard"></i> Dashboard
+      <% end %>
+      <%= link_to new_post_path, class: "btn btn-success" do %>
+        <i class="fa fa-plus"></i> Nuevo artículo
+      <% end %>
+    </div>
+  </div>
 
-<h1>Posts</h1>
+  <% if notice %>
+    <div class="alert alert-success" id="notice"><%= notice %></div>
+  <% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <div class="card shadow-sm">
+    <div class="card-body">
+      <div class="table-responsive">
+        <table class="table table-striped table-hover align-middle">
+          <thead class="table-dark">
+            <tr>
+              <th>Imagen</th>
+              <th>Título</th>
+              <th>Visitas</th>
+              <th width="200" class="text-center">Acciones</th>
+            </tr>
+          </thead>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+          <tbody>
+            <% if @posts.any? %>
+              <% @posts.each do |post| %>
+                <tr>
+                  <td>
+                    <% if post.image.attached? %>
+                      <%= image_tag post.image.variant(:thumb), class: "img-thumbnail", style: "max-width: 100px" %>
+                    <% else %>
+                      <div class="bg-light p-3 text-center">
+                        <small>Sin imagen</small>
+                      </div>
+                    <% end %>
+                  </td>
+                  <td><%= post.title %></td>
+                  <td><span class="badge bg-primary"><%= post.unique_visits %></span></td>
+                  <td class="text-center">
+                    <div class="btn-group btn-group-sm">
+                      <%= link_to post, class: "btn btn-outline-primary" do %>
+                        <i class="fa fa-eye"></i> Ver
+                      <% end %>
+                      <%= link_to edit_post_path(post), class: "btn btn-outline-secondary" do %>
+                        <i class="fa fa-edit"></i> Editar
+                      <% end %>
+                      <%= link_to post, method: :delete, data: { confirm: '¿Está seguro de eliminar este artículo?' }, class: "btn btn-outline-danger" do %>
+                        <i class="fa fa-trash"></i>
+                      <% end %>
+                    </div>
+                  </td>
+                </tr>
+              <% end %>
+            <% else %>
+              <tr>
+                <td colspan="4" class="text-center py-4">No hay artículos para mostrar</td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
